# Agenttic

./: .dockerignore  .env.example  .gitignore  AGENTTIC-MASTER-PLAYBOOK.md  CAPABILITIES.md  CHANGELOG.md  Caddyfile  Dockerfile  Makefile  NOTICES.md  PYPI_README.md  README.md  SPEC.md  ascore.ci_gate_e2e.db  ascore.ci_gate_reg.db  ascore.ci_gate_reportonly.db  ascore.cliproftest.db  ascore.cliproftest.db-shm  ascore.cliproftest.db-wal  ascore.db-shm  ascore.db-wal  ascore.inccli.db  ascore.inccli.db-shm  ascore.inccli.db-wal  config.prod.yaml  config.yaml  docker-compose.yml  pyproject.toml
.github/actions/agent-safety/: Dockerfile  README.md  action.yml  gate.py
.github/workflows/: agent-safety.yml  ci.yml
adapters/: README.md
adapters/langgraph/: README.md  pyproject.toml
adapters/langgraph/agenttic_langgraph/: __init__.py
adapters/openai_agents/: README.md  pyproject.toml
adapters/openai_agents/agenttic_openai_agents/: __init__.py
deploy/: .env.example  docker-compose.yaml
deploy/airgap/: README.md  docker-compose.airgap.yaml
deploy/helm/agenttic/: Chart.yaml  values.yaml
docs/: AIRGAP.md  ATTRIBUTION.md  BILLING.md  CERTIFICATION.md  CONNECT.md  COPILOT.md  DEPLOYMENT_SAFETY.md  EVALUATORS.md  GAMING_RESEARCH.md  GAMING_SPEC.md  HONEST_REVIEW.md  INCIDENT_CROSSWALK.md  INDEX.md  INSPECT_INTEROP.md  MAIL.md  OPERATIONS.md  OTEL_INTEROP.md  PRODUCTION_READINESS.md  QUICKSTART.md  REGULATORY_CROSSWALK.md  RENAME_AUDIT.md  RESEARCH_TESTING_SURVEY.md  SAFE_ASSISTANT.md  SELF_HOSTING.md  SPEC11_DESIGN_SYSTEM.md  SPEC12_SUPPLY_CHAIN.md  SPEC13_COVERAGE_DRIVEN.md  SPEC2_BASELINE.md  SPEC2_DEVIATIONS.md  SPEC9_RUBRIC_ENGINE.md  SPEC_INDEX.md
docs/cert-swe-v1/: COVERAGE.md  README.md
docs/egr_runs/: egr_result.json  egr_result.md
docs/integrations/: README.md  crewai.md  generic-otlp.md  langgraph.md  llamaindex.md  openai-agents.md
examples/: attack_generator_demo.py  certify_demo.sh  evaluator_union_passport.py  honeypot_harness_demo.py  relying_party.py
examples/pilot_support_triage/: cases.json  rubric.json  suite.json  workflow.agent.yaml
scripts/: backup.sh  deploy.sh  disk-guard.sh  egr_live.py  gen_billing_preview.py  gen_swe_manifest.py  honeypot_gate.py  quickstart_check.sh  redteam_gate.py  restore.sh  stripe_provision.py
scripts/release/: pypi.sh
src/agenttic/: __init__.py  __main__.py  _decorator.py  _detect.py  _env.py  ab.py  airgap.py  budget.py  cli.py  config.py  connect.py  cost.py  documents.py  hardening.py  issues.py  migrations.py  ops.py  optimizer.py  result_cache.py  retry.py  scan.py  secrets.py  security.py
src/agenttic/adapters/: anthropic_simple.py  base.py  blackbox_http.py  managed_agent.py  mcp_server.py
src/agenttic/assistant/: __init__.py  adapter.py  agent.py  guard.py  posture.py  store.py  tools.py
src/agenttic/billing/: __init__.py  credits_provider.py  invoices.py  models.py  service.py  store.py  webhooks.py
src/agenttic/camp/: __init__.py  adapter_agent.py  environment.py  holdout.py  improve.py  memory.py  service.py  store.py  task.py  trace.py  trainer.py
src/agenttic/cards/: agency.py  autofill.py  autonomy.py  fields.py
src/agenttic/certification/: __init__.py  __main__.py  abom.py  attest.py  catalog.py  certify.py  coverage.py  domains.py  dossier.py  elicitation.py  hashing.py  mcp_suite.py  memory_suite.py  mock_provider.py  profiles.py  safety_cert.py  staleness.py  swe_pack.py  tiers.py  tool_suite.py
src/agenttic/copilot/: __init__.py  agent.py  credits.py  knowledge.md  service.py  skill.py  store.py  tools.py
src/agenttic/coverage/: __init__.py  collect.py  extractors.py  model.py
src/agenttic/enforce/: adapter_guard.py  approvals.py  async_judge.py  canaries.py  compiler.py  dashboard.py  export.py  feedback.py  gateway.py  interactive_oversight.py  lanes.py  ramp.py  self_security.py
src/agenttic/evaluators/: __init__.py  agenttic_gen.py  base.py  inspect_adapter.py  license_gate.py  orchestrator.py  passport.py
src/agenttic/feeds/: risk_api.py  webhooks.py
src/agenttic/generator/: pipeline.py
src/agenttic/harness/: runner.py
src/ascore/: __init__.py  __main__.py  budget.py  certification.py  cli.py  config.py  cost.py  hardening.py  issues.py  leaderboard.py  migrations.py  ops.py  optimizer.py  pricing.py  retry.py  scan.py  secrets.py  security.py  stats.py
src/ascore/camp/: agent.py  (+6 more)
tests/: conftest.py  test_ab.py  test_ab_api.py  test_ab_report.py  test_ab_stats.py  test_abuse.py  test_adapter_simple.py  test_adapters.py  test_agent_card_schema.py  test_agentdojo.py  test_agentharm.py  test_airgap.py  test_api.py  test_archetype_taxonomy.py  test_assistant.py  test_assistantbench.py  test_attestation.py  test_auth.py  test_auth_endpoints.py  test_autonomy_policy.py  test_bfcl.py  test_bfcl_ast_official.py  test_bfcl_reproduce.py  test_bfcl_splits.py  test_billing.py  test_blackbox.py  test_budget.py  test_calibration_corpus.py  test_camp_api.py  test_camp_core.py  test_camp_loop.py  test_camp_service.py  test_camp_store.py  test_canaries.py  test_canonical_metrics.py  test_capabilities.py  test_cards_fixtures.py  test_catalog_conformance.py  test_cert_billing.py  test_cert_e2e.py  (+142 more)
tests/coverage/: test_coverage_model.py
tests/fixtures/: mcp_server_fixture.py  memory_store_fixture.py
tests/stimulus/: test_cdv.py
tests/verification/: conftest.py  test_assertions.py  test_formal.py  test_run_verification.py  test_signoff.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/public/: llms.txt  robots.txt  sitemap.xml
ui/scripts/: check-bundle.mjs  check-tokens.mjs
ui/src/: App.tsx  AppShell.tsx  api.test.ts  api.ts  assistant.test.ts  assistant.ts  billing.test.ts  billing.ts  cert.test.ts  cert.ts  certdoc.render.test.tsx  main.tsx  notify.ts  pricing.test.tsx  report.render.test.tsx  scanError.test.ts  scanError.ts  score-labels.test.tsx  sse.ts  stats.test.ts  stats.ts  store.test.ts  store.ts  theme.css  theme.ts  traces.test.ts  traces.ts  useAssistantCert.ts  verification.test.tsx  verification.tsx
uploads/: f2695afc-BRD.txt
(+478 files in other folders)
