[project]
name = "ascore"
version = "0.1.0"
description = "Agenttic — agentic scoring & benchmarking platform (UVM-style testbench for AI agents)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "sqlmodel>=0.0.16",
    "anthropic>=0.40",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.6"]
fi = ["ai-evaluation>=0.2"]   # Future AGI scorer (optional, lazy-imported)
postgres = ["psycopg[binary]>=3.1"]   # Postgres backend (optional; SQLite is the default)
redis = ["redis>=5.0"]                # multi-worker events + rate limiting (optional)
otel = [                              # OpenTelemetry tracing (optional)
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

[project.scripts]
ascore = "ascore.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ascore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
