[project]
# The public umbrella distribution. It ships two importable packages:
#   * agenttic — the supported, semver'd public surface (SPEC-8 Hard Rule 36)
#   * ascore   — the internal implementation (not part of the public contract)
# One distribution, one version; the umbrella tracks the core version exactly
# (kept in lock-step with ascore.__version__, asserted by a test).
name = "agenttic"
version = "1.0.0"
description = "Agenttic — certify, trace and enforce AI agents. One install, one import, a signed safety grade."
readme = "README.md"                    # rendered as the PyPI long description
requires-python = ">=3.12"   # uses 3.12-only syntax (PEP 701 f-strings); CI runs 3.12
dependencies = [
    "pydantic>=2.7",
    "sqlmodel>=0.0.16",
    "anthropic>=0.40",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
    "cryptography>=42",
    "fpdf2>=2.7",
    "pypdf>=4.0",            # extract text from uploaded PDF requirement docs
    "python-docx>=1.1",      # extract text from uploaded DOCX requirement docs
    "sqlglot>=25",           # SQL syntax validity for the structured/IR metrics
    "jsonschema>=4",         # JSON Schema validation for structured-output metrics
    "stripe>=10.0",          # billing: Stripe Checkout + webhook signature verify
    "requests>=2.31",        # billing: PayPal REST API + webhook verification
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.6"]
fi = ["ai-evaluation>=0.2"]   # Future AGI scorer (optional, lazy-imported)
safety = [                            # content-safety detectors (optional)
    # Microsoft Presidio for PII detection (MIT — used directly under its own
    # license; see NOTICES.md). Lazy-imported: the safety checks fall back to a
    # standard-regex recognizer set when Presidio/its spaCy model is absent.
    "presidio-analyzer>=2.2",
]
postgres = ["psycopg[binary]>=3.1"]   # Postgres backend (optional; SQLite is the default)
redis = ["redis>=5.0"]                # multi-worker events + rate limiting (optional)
otel = [                              # OpenTelemetry tracing (optional)
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
# --- Framework support (SPEC-8 Step 40, Hard Rule 37) ----------------------
# Optional and lazy: the base install pulls NO framework SDK. Each extra pulls
# the matching adapter distribution, which in turn pins the framework SDK. The
# auto-detecting trace() imports these only when it meets a matching object.
langgraph = ["agenttic-langgraph"]        # → LangGraph / LangChain support
openai = ["agenttic-openai-agents"]       # → OpenAI Agents SDK support
all = ["agenttic[langgraph]", "agenttic[openai]", "agenttic[otel]"]

[project.scripts]
# `agenttic` is the public command; `ascore` stays as a back-compat alias. Both
# drive the same Typer app (adds `agenttic init`, `agenttic doctor`, certify, …).
agenttic = "ascore.cli:app"
ascore = "ascore.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship both packages from the src layout: the public umbrella and the internal
# implementation it re-exports.
packages = ["src/agenttic", "src/ascore"]

[tool.ruff]
# Match the runtime (CI + Docker run Python 3.12). Keeps lint consistent with
# the 3.12-only syntax the code relies on (e.g. PEP 701 f-strings).
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
