[project]
name = "agenttic-langgraph"
version = "0.1.0"
description = "Trace a LangGraph agent onto the Agenttic OTel-GenAI bus (public callbacks only)."
readme = "README.md"
requires-python = ">=3.12"
# Thin adapter: the span builder + optional enforcement guard live in the
# `agenttic` umbrella distribution (which ships the internal ascore package);
# LangChain provides the public callback base. langgraph itself is a peer
# dependency of the user's app, not of this package.
dependencies = ["agenttic", "langchain-core>=0.2"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agenttic_langgraph"]
