[project]
name = "agenttic-openai-agents"
version = "1.0.1"
description = "Trace an OpenAI Agents SDK agent onto the Agenttic OTel-GenAI bus (public RunHooks only)."
readme = "README.md"
requires-python = ">=3.12"
# Thin adapter: the span builder + optional enforcement guard live in the
# `agenttic` umbrella distribution (the published, installable engine — its
# internal package was formerly named `ascore`, which is NOT on PyPI, so we
# depend on `agenttic`, pinned in lock-step with this release). The OpenAI
# Agents SDK provides the public RunHooks lifecycle and is a peer dependency of
# the user's app.
dependencies = ["agenttic==1.0.1", "openai-agents>=0.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agenttic_openai_agents"]
